# mag.wiki-new

./: .env.template  .gitignore  Cargo.toml  bacon.toml  markdown-server  web.nimble
src/: api.nim  article.nim  main.nim  main.nims  main.rs  utils.nim  view.nim
src/api/: article.nim  books.nim  btc.nim  contact.nim  join.nim
src/redis/: article.nim  article_index.nim  books.nim  rd_utils.nim  static_sites.nim
src/view/: articles.nim  author_articles.nim  base.nim  books.nim  btc.nim  contacts.nim  index.nim  join.nim  read_article.nim  tag_articles.nim
static/: fonts.css  main.css
static/font/: fonts.css
static/font/MyFontsWebfontsKit/: MyFontsWebfontsKit.css  StartHere.html
